--- a/hotels.html
+++ b/hotels.html
@@ -2,113 +2,127 @@
 <html class="page" lang="ru">
 
 <head>
-    <meta charset="utf-8">
-    <title>Отели - Седона</title>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+	<meta charset="utf-8">
+	<title>Отели - Седона</title>
+	<link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+	<link href="css/normalize.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 </head>
 
 <body class="page-body">
-    <header class="main-header">
-        <nav class="main-navigation">
-            <a class="logo" href="index.html">
-                <img src="https://via.placeholder.com/138x70" width="138" height="70" alt="Логотип городка Седона">
-            </a>
-            <ul class="site-navigation">
-                <li class="site-navigation__item"><a class="site-navigation__link" href="blank.html">Информация</a></li>
-                <li class="site-navigation__item"><a class="site-navigation__link" href="blank.html">Фото и видео</a></li>
-                <li class="site-navigation__item"><a class="site-navigation__link" href="blank.html">Карта штата</a></li>
-                <li class="site-navigation__item"><a class="site-navigation__link site-navigation__link--current" href="hotels.html">Гостиницы</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main class="container">
-        <section>
-            <!-- Фильтр посика. Тут будет форма-->
-            <button type="button">Показать</button>
-        </section>
-        <section>
-            <h3>Найдено: 3</h3>
-            <p>Сортировка:</p>
-            <a href="blank.html">По цене</a>
-            <a href="blank.html">По типу</a>
-            <a href="blank.html">По рейтингу</a>
-            <a href="blank.html">&#9650;</a>
-            <a href="blank.html">&#9660;</a>
-        </section>
-        <section>
-            <h1 class="hidden">Отели Седоны</h1>
-            <ul>
-                <li>
-                    <a href="blank.html">
-                        <h3>Amara Resort & Spa</h3>
-                        <img src="https://via.placeholder.com/135x90" width="135" height="90" alt="Amara Resort & Spa">
-                    </a>
-                    <p>
-                        Гостиница От 4000 Р.
-                    </p>
-                    <p>
-                        <a href="blank.html">Подробнее</a>
-                        <a href="blank.html">Забронировать</a>
-                    </p>
-                    <p>
-                        Рейтинг: 8,5
-                    </p>
-                </li>
-                <li>
-                    <a href="blank.html">
-                        <h3>Desert Quail Inn</h3>
-                        <img src="https://via.placeholder.com/135x90" width="135" height="90" alt="Desert Quail Inn">
-                    </a>
-                    <p>
-                        Мотель От 3000 Р.
-                    </p>
-                    <p>
-                        <a href="blank.html">Подробнее</a>
-                        <a href="blank.html">Забронировать</a>
-                    </p>
-                    <p>
-                        Рейтинг: 8,9
-                    </p>
-                </li>
-                <li>
-                    <a href="blank.html">
-                        <h3>Villas at Poco Diablo</h3>
-                        <img src="https://via.placeholder.com/135x90" width="135" height="90" alt="Villas at Poco Diablo">
-                    </a>
-                    <p>
-                        Апартаменты От 2000 Р.
-                    </p>
-                    <p>
-                        <a href="blank.html">Подробнее</a>
-                        <a href="blank.html">Забронировать</a>
-                    </p>
-                    <p>
-                        Рейтинг: 9,2
-                    </p>
-                </li>
-            </ul>
-        </section>
-    </main>
-    <footer>
-        <section>
-            <h2 class="hidden">Контакты.</h2>
-            <a href="blank.html">#visitSEDONA</a><br> ТЕЛ: <a href="tel:+74956660166">+7 (495) 666-01-66</a>
-        </section>
-        <section>
-            <h2 class="hidden">Мы в социальных сетях.</h2>
-            <a href="#">Твиттер</a>
-            <a href="#">Фейсбук</a>
-            <a href="#">Ютуб</a>
-        </section>
-        <section>
-            <h2 class="hidden">Разработчики сайта.</h2>
-            Website by
-            <a href="https://htmlacademy.ru">HTML Academy</a>
-        </section>
-    </footer>
-
+	<div class="page-container">
+		<header class="main-header">
+			<nav class="main-navigation">
+				<a class="logo">
+					<img src="https://via.placeholder.com/138x70" width="138" height="70" alt="Логотип городка Седона">
+				</a>
+				<ul class="site-navigation">
+					<li class="site-navigation__item"><a class="site-navigation__link" href="blank.html">Информация</a></li>
+					<li class="site-navigation__item"><a class="site-navigation__link" href="blank.html">Фото и видео</a></li>
+					<li class="site-navigation__item"><a class="site-navigation__link" href="blank.html">Карта штата</a></li>
+					<li class="site-navigation__item"><a class="site-navigation__link" href="hotels.html">Гостиницы</a></li>
+				</ul>
+			</nav>
+		</header>
+		<main class="content-container">
+			<section>
+				<!-- Фильтр посика. Тут будет форма-->
+				<button type="button">Показать</button>
+			</section>
+			<section>
+				<h3>Найдено: 3</h3>
+				<p>Сортировка:</p>
+				<a href="blank.html">По цене</a>
+				<a href="blank.html">По типу</a>
+				<a href="blank.html">По рейтингу</a>
+				<a href="blank.html">&#9650;</a>
+				<a href="blank.html">&#9660;</a>
+			</section>
+			<section>
+				<h1 class="hidden">Отели Седоны</h1>
+				<ul>
+					<li>
+						<a href="blank.html">
+							<h3>Amara Resort & Spa</h3>
+							<img src="https://via.placeholder.com/135x90" width="135" height="90" alt="Amara Resort & Spa">
+						</a>
+						<p>
+							Гостиница От 4000 Р.
+						</p>
+						<p>
+							<a href="blank.html">Подробнее</a>
+							<a href="blank.html">Забронировать</a>
+						</p>
+						<p>
+							Рейтинг: 8,5
+						</p>
+					</li>
+					<li>
+						<a href="blank.html">
+							<h3>Desert Quail Inn</h3>
+							<img src="https://via.placeholder.com/135x90" width="135" height="90" alt="Desert Quail Inn">
+						</a>
+						<p>
+							Мотель От 3000 Р.
+						</p>
+						<p>
+							<a href="blank.html">Подробнее</a>
+							<a href="blank.html">Забронировать</a>
+						</p>
+						<p>
+							Рейтинг: 8,9
+						</p>
+					</li>
+					<li>
+						<a href="blank.html">
+							<h3>Villas at Poco Diablo</h3>
+							<img src="https://via.placeholder.com/135x90" width="135" height="90" alt="Villas at Poco Diablo">
+						</a>
+						<p>
+							Апартаменты От 2000 Р.
+						</p>
+						<p>
+							<a href="blank.html">Подробнее</a>
+							<a href="blank.html">Забронировать</a>
+						</p>
+						<p>
+							Рейтинг: 9,2
+						</p>
+					</li>
+				</ul>
+			</section>
+		</main>
+		<footer class="main-footer">
+			<section class="main-footer__contacts">
+				<h2 class="contacts__header hidden">Контакты.</h2>
+				<p class="contacts">
+					<a class="contacts__link" href="#">#visitSEDONA</a><br> ТЕЛ: <a class="contacts__link"
+						href="tel:+74956660166">+7 (495) 666-01-66</a>
+				</p>
+			</section>
+			<section class="main-footer__social">
+				<h2 class="social_hedaer hidden">Мы в социальных сетях.</h2>
+				<ul class="social__list">
+					<li class="social__item">
+						<a class="social__link" href="#">Твиттер</a>
+					</li>
+					<li class="social__item">
+						<a class="social__link" href="#">Фейсбук</a>
+					</li>
+					<li class="social__item">
+						<a class="social__link" href="#">Ютуб</a>
+					</li>
+				</ul>
+			</section>
+			<section class="developer">
+				<h2 class="developer__header hidden">Разработчики сайта.</h2>
+				<p class="developer__content">
+					Website by
+					<a class="developer__link" href="https://htmlacademy.ru">HTML Academy</a>
+				</p>
+			</section>
+		</footer>
+	</div>
 </body>
 
 </html>
