--- a/hotels.html
+++ b/hotels.html
@@ -30,16 +30,16 @@
         <button class="search__show-button" type="button">Показать</button>
       </section>
       <section class="sorting">
-        <h3 class="sorting__result-text">Найдено: <span class="sorting__result-value">3</span></h3>
+        <h3 class="sorting__result-text">Найдено: 3</h3>
         <p class="sorting__name">Сортировка:</p>
-        <a class="sorting__byprice sorting__byprice_active" href="#">По цене</a>
-        <a class="sorting__bytype" href="#">По типу</a>
-        <a class="sorting__byrating" href="#">По рейтингу</a>
-        <a class="sorting__asc" href="#">&#9650;</a>
-        <a class="sorting__dsc sorting__dsc_active" href="#">&#9660;</a>
+        <a class="sorting__text-link sorting__text-link_active" href="#">По цене</a>
+        <a class="sorting__text-link" href="#">По типу</a>
+        <a class="sorting__text-link" href="#">По рейтингу</a>
+        <a class="sorting__pic-link" href="#">&#9650;</a>
+        <a class="sorting__pic-link sorting__pic-link_active" href="#">&#9660;</a>
       </section>
-      <section class="hotels">
-        <h1 class="hotels__header header-for-robots-and-readers">Отели Седоны</h1>
+      <section class="result-conteiner">
+        <h1 class="header-for-robots-and-readers">Отели Седоны</h1>
         <article class="hotels-item">
           <a class="hotels-item__link" href="blank.html">
             <h3 class="hotels-item__name">Amara Resort & Spa</h3>
@@ -91,29 +91,29 @@
       </section>
     </main>
     <footer class="main-footer">
-      <section class="contacts">
-        <h2 class="contacts__header header-for-robots-and-readers">Контакты.</h2>
-        <p class="contacts__block">
+      <section class="footer-item-container">
+        <h2 class="header-for-robots-and-readers">Контакты.</h2>
+        <p class="contacts">
           <a class="contacts__link" href="#">#visitSEDONA</a><br> ТЕЛ: <a class="contacts__link" href="tel:+74956660166">+7 (495) 666-01-66</a>
         </p>
       </section>
-      <section class="social">
-        <h2 class="social__header header-for-robots-and-readers">Мы в социальных сетях.</h2>
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link" href="#">Твиттер</a>
+      <section class="footer-item-container">
+        <h2 class="header-for-robots-and-readers">Мы в социальных сетях.</h2>
+        <ul class="social-list">
+          <li class="social-list__item">
+            <a class="social-list__link" href="#">Твиттер</a>
           </li>
-          <li class="social__item">
-            <a class="social__link" href="#">Фейсбук</a>
+          <li class="social-list__item">
+            <a class="social-list__link" href="#">Фейсбук</a>
           </li>
-          <li class="social__item">
-            <a class="social__link" href="#">Ютуб</a>
+          <li class="social-list__item">
+            <a class="social-list__link" href="#">Ютуб</a>
           </li>
         </ul>
       </section>
-      <section class="developer">
-        <h2 class="developer_header header-for-robots-and-readers">Разработчики сайта.</h2>
-        <p class="developer__content">
+      <section class="footer-item-container">
+        <h2 class="header-for-robots-and-readers">Разработчики сайта.</h2>
+        <p class="developer">
           Website by
           <a class="developer__link" href="https://htmlacademy.ru">
             <svg width="114" height="40" fill="none" xmlns="http://www.w3.org/2000/svg">
