--- a/hotels.html
+++ b/hotels.html
@@ -14,7 +14,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="logo" href="index.html">
-          <img src="img/site_logo.png" width="138" height="70" alt="Логотип городка Седона">
+          <img src="img/site_logo.png" width="138" height="70" alt="Логотип городка Седона. Переход на главную страницу.">
         </a>
         <ul class="site-navigation">
           <li class="site-navigation__item"><a class="site-navigation__link" href="blank.html">Информация</a></li>
