--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <h2 class="interesting__header">Заинтересовались?</h2>
         <p class="interesting__content">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
         <button class="interesting__search" type="button">Поиск гостиницы в Седоне</button>
-        <section class="interesting__form interesting-form">
+        <section class="interesting-form">
           <h2 class="header-for-robots-and-readers">Поиск гостиницы в Седоне</h2>
           <!-- Здесь будет форма поиска -->
           <button class="interesting-form__find" type="button">Найти</button>
