--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p class="description__content">Рассмотрим 5&nbsp;причин, по&nbsp;которым Седона круче, чем Гранд Каньон!</p>
       </section>
       <section class="block-conteiner">
-        <h2 class="header-for-robots-and-readers">Почему надо посетить городок Седона</h2>
+        <h2 class="visually-hidden">Почему надо посетить городок Седона</h2>
         <ol class="reasons-list">
           <li class="reasons-list__item reasons-list__item--left">
             <div class="item-container">
@@ -84,7 +84,7 @@
         <p class="interesting__content">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
         <button class="interesting__search" type="button">Поиск гостиницы в Седоне</button>
         <section class="interesting-form">
-          <h2 class="header-for-robots-and-readers">Поиск гостиницы в Седоне</h2>
+          <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
           <!-- Здесь будет форма поиска -->
           <button class="interesting-form__find" type="button">Найти</button>
         </section>
@@ -99,29 +99,38 @@
     </main>
     <footer class="main-footer">
       <section class="footer-item-container">
-        <h2 class="header-for-robots-and-readers">Контакты.</h2>
+        <h2 class="visually-hidden">Контакты.</h2>
         <p class="contacts">
           <a class="contacts__link" href="#">#visitSEDONA</a><br> ТЕЛ: <a class="contacts__link" href="tel:+74956660166">+7 (495) 666-01-66</a>
         </p>
       </section>
       <section class="footer-item-container">
-        <h2 class="header-for-robots-and-readers">Мы в социальных сетях.</h2>
+        <h2 class="visually-hidden">Мы в социальных сетях.</h2>
         <ul class="social-list">
           <li class="social-list__item">
-            <a class="social-list__link" href="#">Твиттер</a>
+            <a class="social-list__link" href="#">
+              <span class="visually-hidden">Твиттер</span>
+              <svg width="17" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10.95 1.14a3.1 3.1 0 013.58 1.18c.67-.23 1.33-.48 2-.7a2.34 2.34 0 01-.85 1.76c.69.17 1.3-.49 1.3-.49-.16 1-1 1.79-1.56 2.03C15.2 11.67 12.25 16.13 5.34 16H4.9c-.41 0-4.17-.46-4.9-1.89 2.27.2 3.9-.42 4.7-1.18-.97-.3-2.69-.47-2.99-2.95.35.11.57.23 1.2.12C1.7 9.25.36 8.53.44 6.33a1.9 1.9 0 001.34.47c-.7-.24-1.97-3.36-.9-4.95 1.82 1.85 3.74 3.6 7.16 3.77.2-2.29 1.13-3.83 2.9-4.48z" fill="#fff"/></svg>
+            </a>
           </li>
           <li class="social-list__item">
-            <a class="social-list__link" href="#">Фейсбук</a>
+            <a class="social-list__link" href="#">
+              <span class="visually-hidden">Фейсбук</span>
+              <svg width="12" height="22" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 4V0H8a4 4 0 00-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" fill="#fff"/></svg>
+            </a>
           </li>
           <li class="social-list__item">
-            <a class="social-list__link" href="#">Ютуб</a>
+            <a class="social-list__link" href="#">
+              <span class="visually-hidden">Ютуб</span>
+              <svg width="20" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M3 0h14a3 3 0 013 3v10a3 3 0 01-3 3H3a3 3 0 01-3-3V3a3 3 0 013-3zm3.03 4v8L15 8 6.03 4z" fill="#fff"/></svg>
+            </a>
           </li>
         </ul>
       </section>
       <section class="footer-item-container">
-        <h2 class="header-for-robots-and-readers">Разработчики сайта.</h2>
+        <h2 class="visually-hidden">Разработчики сайта.</h2>
         <p class="developer">
-          Website by
+          <span>Website by</span>
           <a class="developer__link" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
             <svg width="114" height="40" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path class="developer__logo" fill-rule="evenodd" clip-rule="evenodd"
