--- a/index.html
+++ b/index.html
@@ -83,11 +83,26 @@
         <h2 class="interesting__header">Заинтересовались?</h2>
         <p class="interesting__content">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
         <button class="interesting__search" type="button">Поиск гостиницы в Седоне</button>
-        <section class="interesting-form">
-          <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
+        <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
           <!-- Здесь будет форма поиска -->
-          <button class="interesting-form__find" type="button">Найти</button>
-        </section>
+          <p class="search-form__item">
+            <label for="search-form__check-in-date">Дата заезда:</label>
+            <input id="search-form__check-in-date" type="date" name="date-check-in" placeholder="24 апреля 2017">
+          </p>
+          <p class="search-form__item">
+            <label for="search-form__check-out-date">Дата выезда:</label>
+            <input id="search-form__check-out-date" type="date" name="date-check-out" placeholder="4 июля 2017">
+          </p>
+          <p class="search-form__item">
+            <label for="search-form__adults">Взрослые:</label>
+            <input id="search-form__adults" type="number" name="adults" value="2">
+          </p>
+          <p class="search-form__item">
+            <label for="search-form__children">Дети:</label>
+            <input id="search-form__children" type="number" name="children" value="0">
+          </p>
+          <button class="search-form__find" type="button">Найти</button>
+        </form>
       </section>
       <div class="map-container">
         <div id="map" class="map" width="1200" height="473"></div>
